# ed-forge

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: progress-checklist.md  roadmap.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/adapters/: mod.rs  porofessor.rs  tftmeta.rs
ui/: index.html  main.js  styles.css
