[package]
name = "ed-forge"
version = "0.1.0"
description = "Lightweight Tauri shell for game companion features"
authors = ["you"]
edition = "2021"

[lib]
name = "ed_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "=2.10.2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
